# MLET

./: .gitignore  DESIGN.md  MLETP1.md  README.md  pyproject.toml
.github/workflows/: pages.yml
.superpowers/sdd/: task-15-calibration-guard-report.md  task-15-target-receipts-report.md  task-16-docstring-report.md
data/: manifest.json
data/interim/: _landcover.json
data/outlook/: source_registry.json
docs/data/: DATA_CARD.md  GEFS_DAILY_ARTIFACT.md
docs/evaluation/: OUTLOOK_PREREGISTRATION.md  OUTLOOK_RESIDUAL_MODEL_PROTOCOL.md  PREREGISTRATION.md
docs/outlook/: PRODUCT_CONTRACT.md
docs/results/: phase2_openet_value.md
examples/: et_timeseries_template.csv
examples/outlook/: crop_grid.jsonl  hindcast_cases.json  state.jsonl  weather_members.jsonl
scripts/: build_site.py  fetch_data.py
site/: index.html
src/mlet/: __init__.py  __main__.py  baselines.py  build_dataset.py  cli.py  evaluate.py  loader.py  report.py  schema.py  validator.py
tests/: test_baselines.py  test_build_dataset.py  test_build_site.py  test_cli.py  test_cli_phase2.py  test_evaluate.py  test_fetch_data.py  test_loader.py  test_outlook_build.py  test_outlook_contracts.py  test_outlook_crop.py  test_outlook_eto.py  test_outlook_hindcast.py  test_outlook_manifest.py  test_outlook_publish.py  test_outlook_residual_model.py  test_outlook_scenarios.py  test_package.py  test_report.py  test_sources_cdl.py  test_sources_flux.py  test_sources_gefs.py  test_sources_gridmet.py  test_sources_openet.py  test_sources_openet_state.py  test_sources_stations.py  test_validator.py
(+27 files in other folders)
