[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mlet"
version = "0.1.0"
description = "Machine Learning Evapotranspiration - Phase 1 ET time-series CSV validator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
mlet = "mlet.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
