[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mlet"
version = "0.1.0"
description = "Machine Learning Evapotranspiration - Phase 1 ET time-series CSV validator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "xarray>=2023.1",
    "netCDF4>=1.6",
    "openpyxl>=3.1",
    "certifi>=2024.0",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "requests>=2.31",
    "urllib3>=2.0",
    "rasterio>=1.3",
]

[project.scripts]
mlet = "mlet.cli:main"

[tool.setuptools.packages.find]
where = ["src", "vendor/pyfao56/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
